--- a/index.html
+++ b/index.html
@@ -1,49 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
-
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <nav class="nav">
-      
-            <div class="nav-info">
-                <h1 class="nav-title">All Thinks Are <br>Possible If You <br>believe</h1>
-                <p class="nav-pera">There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration in some <br>form, by injected humour, or randomised words</p>
-                <button type="button" class="btn-pimary">Contact Us</button>
-                
-            </div>
-
-        </nav>
-
+      <nav class="nav">
+        <div class="nav-info">
+          <h1 class="nav-title">
+            All Thinks Are <br />Possible If You <br />believe
+          </h1>
+          <p class="nav-pera">
+            There are many variations of passages of Lorem Ipsum
+            <br />available, but the majority have suffered alteration in some
+            <br />form, by injected humour, or randomised words
+          </p>
+          <button type="button" class="btn-pimary">Contact Us</button>
+        </div>
+      </nav>
     </header>
 
     <main>
-        <section class="person-section">
-            <img src="./images/person.png" alt="A person Image">
-            <div class="failures">
-                <h1>My failures of <br>previous year</h1>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-                <div>
-                    <p>Contrary to popular belief, is not simply.</p>
-                    <p>Contrary to popular belief.</p>
-                    <p>Contrary to popular belief.</p>
-                    <p>Contrary to popular belief, is not simply.</p>
-                    <p>Contrary to popular simply.</p>
-                </div>
-            </div>
-        </section>
+      <section class="person-section">
+        <img src="./images/person.png" alt="A person Image" />
+        <div class="failures">
+          <h1>My failures of <br />previous year</h1>
+          <p>
+            Contrary to popular belief, Lorem Ipsum is not <br />simply random
+            text. It has roots in a piece of <br />classical Latin literature
+            from 45 BC, making it <br />over 2000 years old. Richard McClintock.
+          </p>
+          <div>
+            <p>Contrary to popular belief, is not simply.</p>
+            <p>Contrary to popular belief.</p>
+            <p>Contrary to popular belief.</p>
+            <p>Contrary to popular belief, is not simply.</p>
+            <p>Contrary to popular simply.</p>
+          </div>
+        </div>
+      </section>
 
+      <section class="plan-section">
+        <h1>My Plan</h1>
+        <div class="plan-group">
+        <div >
+          <img src="./images/icons/web.png" alt="web" />
+          <br><br>
+          <h1>Web Development</h1><br>
+          <h4>I want to start</h4>
+        </div>
+        <div>
+          <img src="./images/icons/js.png" alt="JS" /><br><br>
+          <h1>Javascript</h1><br>
+          <h4>I want to learn</h4>
+        </div>
+        <div>
+          <img src="./images/icons/smoke.png" alt="" /><br><br>
+          <h1>Smoking Habit</h1><br>
+          <h4>I want to end</h4>
+        </div>
+        <div>
+          <img src="./images/icons/ecom.png" alt="" /><br><br>
+          <h1>ecommerce</h1><br>
+          <h4>I want to develop</h4>
+        </div>
+    </div>
+      </section>
+      <section class="positive-section">
+        <div class="positive-div">
+            <h1>
+                Awlays keep a positive <br>
+mindset
+            </h1>
+            <button type="button" class="btn-pimary" style="background-color: white;color: #F15B22; margin-left: 40px;">Call Now</button>
+        </div>
+      </section>
     </main>
     <footer>
-
+        <div>
+            <h1>Future</h1>
+            <p> There are many variations of passages of Lorem Ipsum <br>
+                available, but the majority have suffered alteration in some <br>
+                form, by injected humour, or randomised words</p>
+            <p>Email : info@gmail.com</p>
+            <p> Phone : 01500 00 00 00</p>
+            <div class="footer-icons"><img src="./images/icons/fb.png" alt="fb"><img src="./images/icons/twitter.png" alt="twitter"><img src="./images/icons/youtube.png" alt="youtube"><img src="" alt=""></div>
+        </div>
+        <div >
+            <h1 style="font-size: large;">Subscribe</h1>
+            <textarea name="" id="" cols="30" rows="2">Enter your email</textarea><br>
+            <button type="button" class="btn-pimary" style="background-color: white;color: #F15B22; padding: 10px 30px; font-size: 15px;"> Subscribe</button>
+        </div>
     </footer>
-</body>
+  </body>
 </html>
